// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/drawer/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ej-navbar ej-navbar-dark"
  >
    <div
      class="ej-navbar-left"
      role="button"
    >
      <span
        aria-hidden="true"
        class="ej-navbar-left-icon"
      >
        <svg
          class="ej-icon ej-icon-ellipsis ej-icon-md"
        >
          <use
            href="#ellipsis"
          />
        </svg>
      </span>
    </div>
    <div
      class="ej-navbar-title"
    >
      Basic
    </div>
    <div
      class="ej-navbar-right"
    />
  </div>
  <div
    class="my-drawer ej-drawer ej-drawer-left ej-drawer-open"
    style="min-height:0"
  >
    <div
      class="ej-drawer-sidebar"
      style="transform:translateX(0%);-webkit-transform:translateX(0%)"
    >
      <div
        class="ej-list"
      >
        <div
          class="ej-list-body"
        >
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line ej-list-line-multiple"
            >
              <div
                class="ej-list-content"
              >
                Category
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category1
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category2
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category3
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category4
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category5
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category6
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category7
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category8
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category9
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category10
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category11
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category12
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category13
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category14
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category15
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ej-drawer-overlay"
      role="presentation"
      style="opacity:1;visibility:visible"
    />
    <div
      class="ej-drawer-content"
      style="color:#A6A6A6;text-align:center;padding-top:42px"
    >
      Click upper-left corner
    </div>
  </div>
</div>
`;

exports[`renders ./components/drawer/demo/dock.md correctly 1`] = `
<div
  style="height:100%"
>
  <div
    class="ej-navbar ej-navbar-dark"
  >
    <div
      class="ej-navbar-left"
      role="button"
    >
      <span
        aria-hidden="true"
        class="ej-navbar-left-icon"
      >
        <svg
          class="ej-icon ej-icon-ellipsis ej-icon-md"
        >
          <use
            href="#ellipsis"
          />
        </svg>
      </span>
    </div>
    <div
      class="ej-navbar-title"
    >
      Docked in document
    </div>
    <div
      class="ej-navbar-right"
    />
  </div>
  <div
    class="my-drawer ej-drawer ej-drawer-left"
    style="min-height:0"
  >
    <div
      class="ej-drawer-sidebar"
      style="border:1px solid #ddd"
    >
      <div
        class="ej-list"
      >
        <div
          class="ej-list-body"
        >
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line ej-list-line-multiple"
            >
              <div
                class="ej-list-content"
              >
                Category
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category1
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category2
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category3
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category4
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category5
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category6
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category7
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category8
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category9
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category10
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category11
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category12
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category13
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category14
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="ej-list-item ej-list-item-middle"
          >
            <div
              class="ej-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="ej-list-line"
            >
              <div
                class="ej-list-content"
              >
                Category15
              </div>
            </div>
            <div
              class="ej-list-ripple"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ej-drawer-overlay"
      role="presentation"
    />
    <div
      class="ej-drawer-content"
      style="color:#A6A6A6;text-align:center;padding-top:42px"
    >
      Click upper-left corner
    </div>
  </div>
</div>
`;
